u_queue.c:173:7: error: implicit declaration of function 'timespec_get' is invalid in C99
Submitted by Vinson Lee
Assigned to mes..@..op.org
Link to original bug (#103674)
Description
mesa: d1edf6e3 (master 17.4.0-devel)
u_queue.c:173:7: error: implicit declaration of function 'timespec_get' is invalid in C99 [-Werror,-Wimplicit-function-declaration] timespec_get(&ts, TIME_UTC); ^
Version: git